@@ -1,3 +1,7 @@
+2025. 1.24. Added zVec3DDataICP. [zeo_vec3d_profile]
+2025. 1.24. Added zVec3DDataPCAFrame. [zeo_vec3d_pca]
+2025. 1.24. Added zVec3DDataIdentFrame. [zeo_errmsg, zeo_vec3d_profile]
+2025. 1.24. Added zMat3DSVD. [zeo_mat3d]
 2025. 1.22. Reflected renaming of zEqual. [zeo_coord2d, test]
 2025. 1.18. Added const qualifiers to some functions. [zeo_render_texture, zeo_coord2d]
 2025. 1.18. Renamed zRGBDec to zRGBDecodeStr. [zeo_render_color]
